[package]
name = "magick_science"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enwin = {path = "enwin"}
encore = {path = "enwin/encore"}
async-std = "1.10.0"


[workspace]
members = [
    "enwin"
]

#texture-synthesis - very good texture generating. Need to learn