[package]
name = "magick_science"
version = "0.0.1"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enwin = {path = "enwin"}
encore = {path = "enwin/encore"}
futures = "0.3.17"

[workspace]
members = [
    "enwin"
]
