[package]
name = "enrender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encore = {path = "../encore"}
ash = "0.33.3+1.2.191"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
features = ["vulkan"]